DetailPage design changes - fixing the page alignment - removed redudant div class "right" - removed detailinfo borders - refactored data loading method in DetailPage - new component: RestaurantDetail, RestaurantMenu -> for better presentation
Other changes
- now SideBar's size is consistently 450px

--- a/frontend/src/containers/DetailPage/DetailPage.css
+++ b/frontend/src/containers/DetailPage/DetailPage.css
@@ -1,31 +1,26 @@
-
-.sideBar{
-    width: 400px;
-    float: left;
-    position: fixed;
+.detailPage {
+    float: right;
+    display: flex;
+    flex-direction: column;
+    width: calc(100% - 450px);
+    min-width: 1000px;
+    height: 100%;
 }
+
 #arrow{
     width: 20px;
     height: 20px;
 }
-.detailPage .right{
-    width: 1000px;
-    float: left;
-    display: flexbox;
-    flex-direction: column;
-    padding-left: 400px;
-}
 #detail{
-    width: 800px;
     height: 300px;
 }
-.detailPage .right .restaurant .image{
+.detailPage .restaurant .image{
     float: left;
     margin-top: 20px;
     margin-left: 30px;
     width: 350px;
 }
-.detailPage .right .restaurant .imageright{
+.detailPage .restaurant .imageright{
     float:left;
     display: flex;
     flex-direction: column;
@@ -33,7 +28,7 @@
 }
 
 
-.detailPage .right .restaurant .imageright .up{
+.detailPage .restaurant .imageright .up{
     height: 50px;
     width: 500px;
     border-bottom: solid;
@@ -41,16 +36,13 @@
     border-bottom-color: grey;
     
 }
-.detailPage .right .restaurant .imageright .up .title{
-    
-    
+.detailPage .restaurant .imageright .up .title{
     font-size: 30px;
     float: left;
-    
     margin-top: 10px;
 }
 
-.detailPage .right .restaurant .imageright .up .rate{
+.detailPage .restaurant .imageright .up .rate{
   
     font-size: xx-large;
     color: orange;
@@ -60,18 +52,14 @@
     margin-top: 20px;
    
 }
-.detailPage .right .restaurant .imageright .up .diff{
+.detailPage .restaurant .imageright .up .diff{
    margin-top: 27px;
    color: orange;
    float: left;
 }
-.detailPage .right .restaurant .imageright .detailinfo{
+.detailPage .restaurant .imageright .detailinfo{
     height: 200px;
     width: 500px;
-  
-    border: solid;
-    border-color:gray;
-    border-width: 1px;
     overflow-y: scroll;
 }
 .moreImage{
